turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: ':' expected but ')' found.
def SetCouleurSol(couleur){
                         ^LangtonsAnt:24: error: identifier expected but '}' found.
}
^