turmites.lessons.turmites.langton.Langton.scala.code
def step() {SetCouleurSol(couleur)
}

def brosse(){
  baisseBrosse()
  leveBrosse()
}

def SetCouleurSol(couleur){
  var couleur = getCouleurSol()
  couleur match{
    case Color.WHITE => setCouleurBrosse(Color.BLACK);brosse();droite();avance()
    case Color.BLACK => setCouleurBrosse(Color.WHITE);brosse();gauche();avance()
  }
}